# legal-agent

./: .env.example  .gitignore  README.md  hybrid_resp.json  main.py  pyproject.toml  req2.json  req_chat.json  req_search.json  resp.json  vector_resp.json
docker/: docker-compose.yml
docker/neo4j-init/: 01_indexes.cypher
docker/postgres-init/: 01_init.sql  02_memory.sql
docs/notes/: M10-evaluation.md  M11-evaluation.md  M4-evaluation-summary.md  M5-evaluation.md  M6-evaluation.md  M7-evaluation.md  M8-evaluation.md  M9-evaluation.md
scripts/: add_tsvector_field.sql  backfill_tsvector.py  compare_agents.py  compare_memory.py  compare_personas.py  compare_rerankers.py  compare_retrievers.py  download_laws.py  m11_extract_references.py  m11_test_agent_kg.py  m11_test_related.py  m9_router_latency.py  m9_test_async_speedup.py  m9_test_checkpoint.py  smoke_test_langgraph.py  smoke_test_reranker.py  smoke_test_tooluse.py  test_abstention_e2e.py  test_agent_edge_cases.py  test_agent_loop.py  test_react_agent.py  test_reranker_module.py  test_tools_module.py  test_two_stage.py
src/legal_agent/agent/: agent_loop.py  checkpointer.py  llm_client.py  react_agent.py  react_agent_with_memory.py  router.py
src/legal_agent/api/: app.py  schemas.py
src/legal_agent/core/: config.py  version.py
src/legal_agent/db/: messages.py  neo4j_client.py  postgres.py  redis_client.py
src/legal_agent/memory/: buffer_memory.py  entity_extractor.py  hard_memory.py  memory_manager.py  summary_memory.py
src/legal_agent/persona/: __init__.py  guard.py  loader.py  personas.yaml  user_persona.py
src/legal_agent/rag/: abstention.py  bm25_retriever.py  chunker.py  context_reorder.py  embedder.py  fusion.py  hybrid_retriever.py  indexer.py  parser.py  reranker.py  retriever.py  tokenizer.py  two_stage_retriever.py
src/legal_agent/tools/: __init__.py  definitions.py  dispatcher.py  get_law_article.py  get_related_articles.py  legal_search.py
tests/: conftest.py  test_abstention.py  test_app.py  test_chunker.py  test_config.py  test_context_reorder.py  test_db.py  test_parser.py  test_schemas.py  test_version.py
tests/agent/: test_router.py
tests/db/: test_neo4j_client.py
tests/memory/: test_buffer_memory.py  test_entity_extractor.py  test_hard_memory.py  test_memory_manager.py  test_react_with_memory.py  test_summary_memory.py
tests/persona/: test_guard.py  test_loader.py  test_persona_injection.py  test_user_persona.py
