[project]
name = "legal-agent"
version = "0.1.0"
description = "企业级智能法律顾问 Agent"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30",
    "beautifulsoup4>=4.14.3",
    "dashscope>=1.25.17",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=3.0.5",
    "lxml>=6.1.0",
    "markitdown>=0.1.5",
    "openai>=2.32.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "sse-starlette>=3.4.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28.1",
    "types-tqdm>=4.67.3.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legal_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dashscope.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = ["jieba.*"]
ignore_missing_imports = true
